# playwright-python

./: Makefile  README.md  pyproject.toml
src/playright_python/: app.py  app_not_headless.py  calgentik.py  favicon.py  images.py  locators.py  locators_2.py
