[project]
name = "playright-python"
version = "0.1.0"
description = "A Python Playright Automation Framework"
authors = [
    {name = "Nick Baynham", email = "nickbaynham@gmail.com"},
]
dependencies = ["pytest-playwright>=0.7.0", "pytest>=8.3.5", "pytest-asyncio>=0.26.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
